crates/uv/tests/pip_compile/snapshots/pip_compile__pip_compile__pep_751_compile_g_e_specific_included@all-extras.snap
---
source: crates/uv/tests/pip_compile/pip_compile.rs
expression: snapshot
---
exit_code: 0 (success)
----- stdout -----
# This file was autogenerated by uv via the following command:
#    uv pip compile --cache-dir [CACHE_DIR] pyproject.toml --universal --all-extras -o pylock.toml
lock-version = "1.0"
created-by = "uv"
requires-python = ">=3.12"
extras = [
    "lint",
    "test",
]
dependency-groups = [
]

[[packages]]
name = "certifi"
version = "2024.2.2"
sdist = { url = "https://files.pythonhosted.org/packages/71/da/e94e26401b62acd6d91df2b52954aceb7f561743aa5ccc32152886c76c96/certifi-2024.2.2.tar.gz", upload-time = 2024-02-02T01:22:17Z, size = 164886, hashes = { sha256 = "0569859f95fc761b18b45ef421b1290a0f65f147e92a1e5eb3e635f9a5e4e66f" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/ba/06/a07f096c664aeb9f01624f858c3add0a4e913d6c96257acb4fce61e7de14/certifi-2024.2.2-py3-none-any.whl", upload-time = 2024-02-02T01:22:14Z, size = 163774, hashes = { sha256 = "dc383c07b76109f368f6106eee2b593b04a011ea4d55f652c6ca24a754d1cdd1" } }]

[[packages]]
name = "charset-normalizer"
version = "3.3.2"
sdist = { url = "https://files.pythonhosted.org/packages/63/09/c1bc53dab74b1816a00d8d030de5bf98f724c52c1635e07681d312f20be8/charset-normalizer-3.3.2.tar.gz", upload-time = 2023-11-01T04:04:59Z, size = 104809, hashes = { sha256 = "f30c3cb33b24454a82faecaf01b19c18562b1e89558fb6c56de4d9118a032fd5" } }
wheels = [
    { url = "https://files.pythonhosted.org/packages/d1/b2/fcedc8255ec42afee97f9e6f0145c734bbe104aac28300214593eb326f1d/charset_normalizer-3.3.2-cp312-cp312-macosx_10_9_universal2.whl", upload-time = 2023-11-01T04:03:24Z, size = 192892, hashes = { sha256 = "0b2b64d2bb6d3fb9112bafa732def486049e63de9618b5843bcdd081d8144cd8" } },
    { url = "https://files.pythonhosted.org/packages/2e/7d/2259318c202f3d17f3fe6438149b3b9e706d1070fe3fcbb28049730bb25c/charset_normalizer-3.3.2-cp312-cp312-macosx_10_9_x86_64.whl", upload-time = 2023-11-01T04:03:25Z, size = 122213, hashes = { sha256 = "ddbb2551d7e0102e7252db79ba445cdab71b26640817ab1e3e3648dad515003b" } },
    { url = "https://files.pythonhosted.org/packages/3a/52/9f9d17c3b54dc238de384c4cb5a2ef0e27985b42a0e5cc8e8a31d918d48d/charset_normalizer-3.3.2-cp312-cp312-macosx_11_0_arm64.whl", upload-time = 2023-11-01T04:03:27Z, size = 119404, hashes = { sha256 = "55086ee1064215781fff39a1af09518bc9255b50d6333f2e4c74ca09fac6a8f6" } },
    { url = "https://files.pythonhosted.org/packages/99/b0/9c365f6d79a9f0f3c379ddb40a256a67aa69c59609608fe7feb6235896e1/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", upload-time = 2023-11-01T04:03:28Z, size = 137275, hashes = { sha256 = "8f4a014bc36d3c57402e2977dada34f9c12300af536839dc38c0beab8878f38a" } },
    { url = "https://files.pythonhosted.org/packages/91/33/749df346e93d7a30cdcb90cbfdd41a06026317bfbfb62cd68307c1a3c543/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_ppc64le.manylinux2014_ppc64le.whl", upload-time = 2023-11-01T04:03:29Z, size = 147518, hashes = { sha256 = "a10af20b82360ab00827f916a6058451b723b4e65030c5a18577c8b2de5b3389" } },
    { url = "https://files.pythonhosted.org/packages/72/1a/641d5c9f59e6af4c7b53da463d07600a695b9824e20849cb6eea8a627761/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_s390x.manylinux2014_s390x.whl", upload-time = 2023-11-01T04:03:31Z, size = 140182, hashes = { sha256 = "8d756e44e94489e49571086ef83b2bb8ce311e730092d2c34ca8f7d925cb20aa" } },
    { url = "https://files.pythonhosted.org/packages/ee/fb/14d30eb4956408ee3ae09ad34299131fb383c47df355ddb428a7331cfa1e/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", upload-time = 2023-11-01T04:03:32Z, size = 141869, hashes = { sha256 = "90d558489962fd4918143277a773316e56c72da56ec7aa3dc3dbbe20fdfed15b" } },
    { url = "https://files.pythonhosted.org/packages/df/3e/a06b18788ca2eb6695c9b22325b6fde7dde0f1d1838b1792a0076f58fe9d/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_5_i686.manylinux1_i686.manylinux_2_17_i686.manylinux2014_i686.whl", upload-time = 2023-11-01T04:03:34Z, size = 144042, hashes = { sha256 = "6ac7ffc7ad6d040517be39eb591cac5ff87416c2537df6ba3cba3bae290c0fed" } },
    { url = "https://files.pythonhosted.org/packages/45/59/3d27019d3b447a88fe7e7d004a1e04be220227760264cc41b405e863891b/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_aarch64.whl", upload-time = 2023-11-01T04:03:35Z, size = 138275, hashes = { sha256 = "7ed9e526742851e8d5cc9e6cf41427dfc6068d4f5a3bb03659444b4cabf6bc26" } },
    { url = "https://files.pythonhosted.org/packages/7b/ef/5eb105530b4da8ae37d506ccfa25057961b7b63d581def6f99165ea89c7e/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_i686.whl", upload-time = 2023-11-01T04:03:37Z, size = 144819, hashes = { sha256 = "8bdb58ff7ba23002a4c5808d608e4e6c687175724f54a5dade5fa8c67b604e4d" } },
    { url = "https://files.pythonhosted.org/packages/a2/51/e5023f937d7f307c948ed3e5c29c4b7a3e42ed2ee0b8cdf8f3a706089bf0/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_ppc64le.whl", upload-time = 2023-11-01T04:03:38Z, size = 149415, hashes = { sha256 = "6b3251890fff30ee142c44144871185dbe13b11bab478a88887a639655be1068" } },
    { url = "https://files.pythonhosted.org/packages/24/9d/2e3ef673dfd5be0154b20363c5cdcc5606f35666544381bee15af3778239/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_s390x.whl", upload-time = 2023-11-01T04:03:40Z, size = 141212, hashes = { sha256 = "b4a23f61ce87adf89be746c8a8974fe1c823c891d8f86eb218bb957c924bb143" } },
    { url = "https://files.pythonhosted.org/packages/5b/ae/ce2c12fcac59cb3860b2e2d76dc405253a4475436b1861d95fe75bdea520/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_x86_64.whl", upload-time = 2023-11-01T04:03:41Z, size = 142167, hashes = { sha256 = "efcb3f6676480691518c177e3b465bcddf57cea040302f9f4e6e191af91174d4" } },
    { url = "https://files.pythonhosted.org/packages/ed/3a/a448bf035dce5da359daf9ae8a16b8a39623cc395a2ffb1620aa1bce62b0/charset_normalizer-3.3.2-cp312-cp312-win32.whl", upload-time = 2023-11-01T04:03:42Z, size = 93041, hashes = { sha256 = "d965bba47ddeec8cd560687584e88cf699fd28f192ceb452d1d7ee807c5597b7" } },
    { url = "https://files.pythonhosted.org/packages/b6/7c/8debebb4f90174074b827c63242c23851bdf00a532489fba57fef3416e40/charset_normalizer-3.3.2-cp312-cp312-win_amd64.whl", upload-time = 2023-11-01T04:03:44Z, size = 100397, hashes = { sha256 = "96b02a3dc4381e5494fad39be677abcb5e6634bf7b4fa83a6dd3112607547001" } },
    { url = "https://files.pythonhosted.org/packages/28/76/e6222113b83e3622caa4bb41032d0b1bf785250607392e1b778aca0b8a7d/charset_normalizer-3.3.2-py3-none-any.whl", upload-time = 2023-11-01T04:04:58Z, size = 48543, hashes = { sha256 = "3e4d1f6587322d2788836a99c69062fbb091331ec940e02d12d179c1d53e25fc" } },
]

[[packages]]
name = "colorama"
version = "0.4.6"
marker = "sys_platform == 'win32' and 'test' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/d8/53/6f443c9a4a8358a93a6792e2acffb9d9d5cb0a5cfd8802644b7b1c9a02e4/colorama-0.4.6.tar.gz", upload-time = 2022-10-25T02:36:22Z, size = 27697, hashes = { sha256 = "08695f5cb7ed6e0531a20572697297273c47b8cae5a63ffc6d6ed5c201be6e44" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/d1/d6/3965ed04c63042e047cb6a3e6ed1a63a35087b6a609aa3a15ed8ac56c221/colorama-0.4.6-py2.py3-none-any.whl", upload-time = 2022-10-25T02:36:20Z, size = 25335, hashes = { sha256 = "4f1d9991f5acc0ca119f9d443620b77f9d6b33703e51011c16baf57afb285fc6" } }]

[[packages]]
name = "idna"
version = "3.6"
sdist = { url = "https://files.pythonhosted.org/packages/bf/3f/ea4b9117521a1e9c50344b909be7886dd00a519552724809bb1f486986c2/idna-3.6.tar.gz", upload-time = 2023-11-25T15:40:54Z, size = 175426, hashes = { sha256 = "9ecdbbd083b06798ae1e86adcbfe8ab1479cf864e4ee30fe4e46a003d12491ca" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/c2/e7/a82b05cf63a603df6e68d59ae6a68bf5064484a0718ea5033660af4b54a9/idna-3.6-py3-none-any.whl", upload-time = 2023-11-25T15:40:52Z, size = 61567, hashes = { sha256 = "c05567e9c24a6b9faaa835c4821bad0590fbb9d5779e7caa6e1cc4978e7eb24f" } }]

[[packages]]
name = "iniconfig"
version = "2.0.0"
marker = "'test' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/d7/4b/cbd8e699e64a6f16ca3a8220661b5f83792b3017d0f79807cb8708d33913/iniconfig-2.0.0.tar.gz", upload-time = 2023-01-07T11:08:11Z, size = 4646, hashes = { sha256 = "2d91e135bf72d31a410b17c16da610a82cb55f6b0477d1a902134b24a455b8b3" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/ef/a6/62565a6e1cf69e10f5727360368e451d4b7f58beeac6173dc9db836a5b46/iniconfig-2.0.0-py3-none-any.whl", upload-time = 2023-01-07T11:08:09Z, size = 5892, hashes = { sha256 = "b6a85871a79d2e3b22d2d1b94ac2824226a63c6b741c88f7ae975f18b6778374" } }]

[[packages]]
name = "packaging"
version = "24.0"
marker = "'test' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/ee/b5/b43a27ac7472e1818c4bafd44430e69605baefe1f34440593e0332ec8b4d/packaging-24.0.tar.gz", upload-time = 2024-03-10T09:39:28Z, size = 147882, hashes = { sha256 = "eb82c5e3e56209074766e6885bb04b8c38a0c015d0a30036ebe7ece34c9989e9" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/49/df/1fceb2f8900f8639e278b056416d49134fb8d84c5942ffaa01ad34782422/packaging-24.0-py3-none-any.whl", upload-time = 2024-03-10T09:39:25Z, size = 53488, hashes = { sha256 = "2ddfb553fdf02fb784c234c7ba6ccc288296ceabec964ad2eae3777778130bc5" } }]

[[packages]]
name = "pluggy"
version = "1.4.0"
marker = "'test' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/54/c6/43f9d44d92aed815e781ca25ba8c174257e27253a94630d21be8725a2b59/pluggy-1.4.0.tar.gz", upload-time = 2024-01-24T13:45:15Z, size = 65812, hashes = { sha256 = "8c85c2876142a764e5b7548e7d9a0e0ddb46f5185161049a79b7e974454223be" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/a5/5b/0cc789b59e8cc1bf288b38111d002d8c5917123194d45b29dcdac64723cc/pluggy-1.4.0-py3-none-any.whl", upload-time = 2024-01-24T13:45:14Z, size = 20120, hashes = { sha256 = "7db9f7b503d67d1c5b95f59773ebb58a8c1c288129a88665838012cfb07b8981" } }]

[[packages]]
name = "pytest"
version = "8.1.1"
marker = "'test' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/30/b7/7d44bbc04c531dcc753056920e0988032e5871ac674b5a84cb979de6e7af/pytest-8.1.1.tar.gz", upload-time = 2024-03-09T11:51:08Z, size = 1409703, hashes = { sha256 = "ac978141a75948948817d360297b7aae0fcb9d6ff6bc9ec6d514b85d5a65c044" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/4d/7e/c79cecfdb6aa85c6c2e3cf63afc56d0f165f24f5c66c03c695c4d9b84756/pytest-8.1.1-py3-none-any.whl", upload-time = 2024-03-09T11:51:04Z, size = 337359, hashes = { sha256 = "2a8386cfc11fa9d2c50ee7b2a57e7d898ef90470a7a34c4b949ff59662bb78b7" } }]

[[packages]]
name = "requests"
version = "2.31.0"
sdist = { url = "https://files.pythonhosted.org/packages/9d/be/10918a2eac4ae9f02f6cfe6414b7a155ccd8f7f9d4380d62fd5b955065c3/requests-2.31.0.tar.gz", upload-time = 2023-05-22T15:12:44Z, size = 110794, hashes = { sha256 = "942c5a758f98d790eaed1a29cb6eefc7ffb0d1cf7af05c3d2791656dbd6ad1e1" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/70/8e/0e2d847013cb52cd35b38c009bb167a1a26b2ce6cd6965bf26b47bc0bf44/requests-2.31.0-py3-none-any.whl", upload-time = 2023-05-22T15:12:42Z, size = 62574, hashes = { sha256 = "58cd2187c01e70e6e26505bca751777aa9f2ee0b7f4300988b709f44e013003f" } }]

[[packages]]
name = "ruff"
version = "0.3.4"
marker = "'lint' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/a0/98/91e1ad8a6777c300b15cad46a1b507375010f8a53cfeaa17f0385bde1103/ruff-0.3.4.tar.gz", upload-time = 2024-03-21T19:21:26Z, size = 2129882, hashes = { sha256 = "f0f4484c6541a99862b693e13a151435a279b271cff20e37101116a21e2a1ad1" } }
wheels = [
    { url = "https://files.pythonhosted.org/packages/a4/61/797dce050c288fc8325e6b723baa1dd6aff4851ee1b769350b54fd3e0fe5/ruff-0.3.4-py3-none-macosx_10_12_x86_64.macosx_11_0_arm64.macosx_10_12_universal2.whl", upload-time = 2024-03-21T19:20:30Z, size = 16472324, hashes = { sha256 = "60c870a7d46efcbc8385d27ec07fe534ac32f3b251e4fc44b3cbfd9e09609ef4" } },
    { url = "https://files.pythonhosted.org/packages/b9/3c/5025d7eee9dd76abb489c1a98c05797e1889329abf8b8b4efcd7095e74f5/ruff-0.3.4-py3-none-macosx_10_12_x86_64.whl", upload-time = 2024-03-21T19:20:34Z, size = 8447934, hashes = { sha256 = "6fc14fa742e1d8f24910e1fff0bd5e26d395b0e0e04cc1b15c7c5e5fe5b4af91" } },
    { url = "https://files.pythonhosted.org/packages/5e/c3/2e6aca190ac828dc94bf86384e89513a4a987816c6ddd6a1db4fca0fdd17/ruff-0.3.4-py3-none-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", upload-time = 2024-03-21T19:20:38Z, size = 8106257, hashes = { sha256 = "d3ee7880f653cc03749a3bfea720cf2a192e4f884925b0cf7eecce82f0ce5854" } },
    { url = "https://files.pythonhosted.org/packages/03/92/57b9193e5600445a20d331c9a23dc6c17d27fc50642315bde6fbdaa83499/ruff-0.3.4-py3-none-manylinux_2_17_armv7l.manylinux2014_armv7l.whl", upload-time = 2024-03-21T19:20:42Z, size = 7470593, hashes = { sha256 = "cf133dd744f2470b347f602452a88e70dadfbe0fcfb5fd46e093d55da65f82f7" } },
    { url = "https://files.pythonhosted.org/packages/93/80/26e4cc40921d759bbdf49b898861aeaf7e1bed80001fc26073a97aac613f/ruff-0.3.4-py3-none-manylinux_2_17_i686.manylinux2014_i686.whl", upload-time = 2024-03-21T19:20:45Z, size = 8635128, hashes = { sha256 = "3f3860057590e810c7ffea75669bdc6927bfd91e29b4baa9258fd48b540a4365" } },
    { url = "https://files.pythonhosted.org/packages/b5/42/b90b05d167c056aeb71b954cb61fad97a61aaea2a4d5e4e6cba4570c8221/ruff-0.3.4-py3-none-manylinux_2_17_ppc64.manylinux2014_ppc64.whl", upload-time = 2024-03-21T19:20:49Z, size = 9389231, hashes = { sha256 = "986f2377f7cf12efac1f515fc1a5b753c000ed1e0a6de96747cdf2da20a1b369" } },
    { url = "https://files.pythonhosted.org/packages/8e/d7/cd9e7e8d8ca4034577fd28e9ff11551df8d2df9e77a16eecee12121d0f7d/ruff-0.3.4-py3-none-manylinux_2_17_ppc64le.manylinux2014_ppc64le.whl", upload-time = 2024-03-21T19:20:52Z, size = 9094312, hashes = { sha256 = "c4fd98e85869603e65f554fdc5cddf0712e352fe6e61d29d5a6fe087ec82b76c" } },
    { url = "https://files.pythonhosted.org/packages/f6/bb/c583d2a0c8e91ee84a13c31b714070a89863348bbecd2e31ca6ed9b18924/ruff-0.3.4-py3-none-manylinux_2_17_s390x.manylinux2014_s390x.whl", upload-time = 2024-03-21T19:20:55Z, size = 9909854, hashes = { sha256 = "64abeed785dad51801b423fa51840b1764b35d6c461ea8caef9cf9e5e5ab34d9" } },
    { url = "https://files.pythonhosted.org/packages/2e/95/ec159b3cae9960811fe573586ca905578ff78d33f025ae054d30ef6c2b73/ruff-0.3.4-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", upload-time = 2024-03-21T19:20:58Z, size = 8658269, hashes = { sha256 = "df52972138318bc7546d92348a1ee58449bc3f9eaf0db278906eb511889c4b50" } },
    { url = "https://files.pythonhosted.org/packages/0e/27/13e2cf723209f8e8169de81d4be5b985ff46549b452d112d3e36899ec2ef/ruff-0.3.4-py3-none-musllinux_1_2_aarch64.whl", upload-time = 2024-03-21T19:21:03Z, size = 8008722, hashes = { sha256 = "98e98300056445ba2cc27d0b325fd044dc17fcc38e4e4d2c7711585bd0a958ed" } },
    { url = "https://files.pythonhosted.org/packages/c6/04/036aa4328dfcb50009e80baac7bc78b8532ea9e8c0b6a1d4b75a684301a5/ruff-0.3.4-py3-none-musllinux_1_2_armv7l.whl", upload-time = 2024-03-21T19:21:06Z, size = 7463983, hashes = { sha256 = "519cf6a0ebed244dce1dc8aecd3dc99add7a2ee15bb68cf19588bb5bf58e0488" } },
    { url = "https://files.pythonhosted.org/packages/32/cc/728245664c1fe2adbe90af1044ff2f548527ed12fc607bae74043387990f/ruff-0.3.4-py3-none-musllinux_1_2_i686.whl", upload-time = 2024-03-21T19:21:09Z, size = 8232832, hashes = { sha256 = "bb0acfb921030d00070539c038cd24bb1df73a2981e9f55942514af8b17be94e" } },
    { url = "https://files.pythonhosted.org/packages/a1/ff/88a45e7b8b87c7a8dac38786ebb800325f9523a9af89f21382104874d9d9/ruff-0.3.4-py3-none-musllinux_1_2_x86_64.whl", upload-time = 2024-03-21T19:21:12Z, size = 8705875, hashes = { sha256 = "cf187a7e7098233d0d0c71175375c5162f880126c4c716fa28a8ac418dcf3378" } },
    { url = "https://files.pythonhosted.org/packages/b9/4b/290e829a7c33fa996f0a598f2cdc954b4820262bb027e0a2edd888c3600d/ruff-0.3.4-py3-none-win32.whl", upload-time = 2024-03-21T19:21:15Z, size = 7645340, hashes = { sha256 = "af27ac187c0a331e8ef91d84bf1c3c6a5dea97e912a7560ac0cef25c526a4102" } },
    { url = "https://files.pythonhosted.org/packages/09/a1/ecbd844e714a4bed4b9072f5a73bbdc2a3a6e6ee9d9c5b3962be83d5bac8/ruff-0.3.4-py3-none-win_amd64.whl", upload-time = 2024-03-21T19:21:19Z, size = 8436394, hashes = { sha256 = "de0d5069b165e5a32b3c6ffbb81c350b1e3d3483347196ffdf86dc0ef9e37dd6" } },
    { url = "https://files.pythonhosted.org/packages/f3/c4/afb3bb366074fa98faeb6389618bf10b3eb00bd1eb48d980c205da9b2022/ruff-0.3.4-py3-none-win_arm64.whl", upload-time = 2024-03-21T19:21:23Z, size = 7991316, hashes = { sha256 = "6810563cc08ad0096b57c717bd78aeac888a1bfd38654d9113cb3dc4d3f74232" } },
]

[[packages]]
name = "urllib3"
version = "2.2.1"
sdist = { url = "https://files.pythonhosted.org/packages/7a/50/7fd50a27caa0652cd4caf224aa87741ea41d3265ad13f010886167cfcc79/urllib3-2.2.1.tar.gz", upload-time = 2024-02-18T03:55:57Z, size = 291020, hashes = { sha256 = "d0570876c61ab9e520d776c38acbbb5b05a776d3f9ff98a5c8fd5162a444cf19" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/a2/73/a68704750a7679d0b6d3ad7aa8d4da8e14e151ae82e6fee774e6e0d05ec8/urllib3-2.2.1-py3-none-any.whl", upload-time = 2024-02-18T03:55:54Z, size = 121067, hashes = { sha256 = "450b20ec296a467077128bff42b73080516e71b56ff59a60a02bef2232c4fa9d" } }]

----- stderr -----
Resolved 11 packages in [TIME]
